Polish up settings

--- a/views/partials/settings.html
+++ b/views/partials/settings.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div id="minimum-end-time-col" style="display:none;">
-          <label for="set-minimum-end-time">Suggested minimum end time <span class="ts-info-icon" title="Uses this time and your rounding preference to recommend when you should finish for the day.">i</span></label>
+          <label for="set-minimum-end-time">Suggested minimum end time</label>
           <div class="ts-note">The minimum time of the day you aim to leave at. Uses this value and the time entry rounding to recommend when you should leave for the day to round out your hours.</div>
           <div class="ts-settings-field">
             <input type="time" id="set-minimum-end-time" />
